--- a/ham.html
+++ b/ham.html
@@ -15,10 +15,10 @@
         <menu>
             <menu>
                 <a href="Gab8787.github.io/projeto-burguer/home.html" target="_blank">HOME 🏡 | </a>
-                <a href="ab8787.github.io/projeto-burguer/ham.html" target="_blank">HAMBURGUERS 🍔 |</a>
-                <a href="ab8787.github.io/projeto-burguer/sob.html" target="_blank">SOBREMESAS 🍨 |</a>
-                <a href="ab8787.github.io/projeto-burguer/beb.html" target="_blank">BEBIDAS 🥤 |</a>
-                <a href="ab8787.github.io/projeto-midia/index.html" target="_blank">CONTATO 🤖 </a>
+                <a href="Gab8787.github.io/projeto-burguer/ham.html" target="_blank">HAMBURGUERS 🍔 |</a>
+                <a href="Gab8787.github.io/projeto-burguer/sob.html" target="_blank">SOBREMESAS 🍨 |</a>
+                <a href="Gab8787.github.io/projeto-burguer/beb.html" target="_blank">BEBIDAS 🥤 |</a>
+                <a href="Gab8787.github.io/projeto-midia/index.html" target="_blank">CONTATO 🤖 </a>
         </menu>
     </header>
     
