--- a/home.html
+++ b/home.html
@@ -12,11 +12,11 @@
             <div>
                 <header>
                     <h1>CASIN BURGUER</h1> <menu>
-                        <a href="gab8787.github.io/projeto-burguer/home.html" target="_blank">HOME 🏡 | </a>
-                        <a href="gab8787.github.io/projeto-burguer/ham.html" target="_blank">HAMBURGUERS 🍔 |</a>
+                        <a href="https://gab8787.github.io/projeto-burguer/home.html" target="_blank">HOME 🏡 | </a>
+                        <a href="https://gab8787.github.io/projeto-burguer/ham.html" target="_blank">HAMBURGUERS 🍔 |</a>
                         <a href="https://gab8787.github.io/projeto-burguer/sob.html" target="_blank">SOBREMESAS 🍨 |</a>
-                        <a href="gab8787.github.io/projeto-burguer/beb.html" target="_blank">BEBIDAS 🥤 |</a>
-                        <a href="gab8787.github.io/projeto-midia/index.html" target="_blank">CONTATO 🤖 </a>
+                        <a href="https://gab8787.github.io/projeto-burguer/beb.html" target="_blank">BEBIDAS 🥤 |</a>
+                        <a href="https://gab8787.github.io/projeto-midia/" target="_blank">CONTATO 🤖 </a>
                     </menu>
                 
                 </header>
